// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertHistory /> handles fetch errors 1`] = `
<DocumentFragment>
  <div
    class="w-100 d-flex"
  >
    <div
      class="w-100 d-flex justify-content-between align-self-center"
    >
      <div
        class="alert-history-tooltip tooltip-trigger"
      >
        <svg
          class="alert-history"
        >
          <rect
            class="error"
            rx="2"
            ry="2"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AlertHistory /> handles responses with errors 1`] = `
<DocumentFragment>
  <div
    class="w-100 d-flex"
  >
    <div
      class="w-100 d-flex justify-content-between align-self-center"
    >
      <div
        class="alert-history-tooltip tooltip-trigger"
      >
        <svg
          class="alert-history"
        >
          <rect
            class="error"
            rx="2"
            ry="2"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AlertHistory /> matches snapshot with empty response 1`] = `
<DocumentFragment>
  <div
    class="w-100 d-flex"
  >
    <div
      class="w-100 d-flex justify-content-between align-self-center"
    >
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AlertHistory /> matches snapshot with rainbow response 1`] = `
<DocumentFragment>
  <div
    class="w-100 d-flex"
  >
    <div
      class="w-100 d-flex justify-content-between align-self-center"
    >
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-1"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-2"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-3"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-4"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-5"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-1"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-2"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-3"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-4"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-5"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-1"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-2"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-3"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-4"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-5"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="inactive"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-1"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-2"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-3"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-4"
          rx="2"
          ry="2"
        />
      </svg>
      <svg
        class="alert-history"
      >
        <rect
          class="firing firing-5"
          rx="2"
          ry="2"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
